<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/LoginHomeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/RegisterHomeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LoginHomeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RegisterHomeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/splash"
        android:contentDescription="@string/todo"
        android:src="@drawable/foreground"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>