<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".ImplicitActivity">

    <TextView
        android:id="@+id/WhereWouldYouLikeToGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/where_would_you_like_to_go"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/GoogleMaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/WhereWouldYouLikeToGo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/google_maps"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Notepad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/GoogleMaps"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/notepad"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Whatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Notepad"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/whatsapp"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>