<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".NextActivity">

    <TextView
        android:id="@+id/DisplayUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/display_username"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ChangeBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/DisplayUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/change_background"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/BackToHomeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ChangeBackground"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/back_to_home_screen"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>